# Fetch.AI_Hackathon_Dubai_2025_submission-

./: README.md
Ethical_Text_Gen_Agent/: agent.py  request_fabric.py
User_Agent/: agent.py
Voice_Agent/: agent.py
main_agent/: Dockerfile  Readme.md  agent1qtjptsnjm3_data.json  agent_protocol.py  asi1.py  database.db  database.py  env.py  main.py  models.py  payment.py  private_keys.json  pyproject.toml  request_fabric.py  test.py  waver.py
