[tool.poetry]
name = "fetchai"
version = "0.1.0"
description = ""
authors = ["tmazitov <timurmazitov000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uagents = "^0.22.3"
pydantic = "^2.11.4"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
